# 2D3DAutoReg

./: .dockerignore  .gitignore  .modalignore  CLAUDE.md  Makefile  README.md  box.py  camera.py  camera_set.py  compute_error.py  cuda_funs.cu  deploy_modal.py  docker-compose.yml  drr_registration.py  drr_set.py  kernels.cu  main_window.py  metrics.py  modal_app.py  ray.py  raybox.py  test_funs.py  utils.py
.claude/: CLAUDE.md  launch.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: drr_engine.py  main.py  metrics.py  registration.py  session_manager.py
docs/: modernization-plan-phase1.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
